# throwing_environment

./: CMakeLists.txt  README.md  manifest.xml
configuration/: throwing.smurfs
configuration/robot/smurf/: robot.smurf  robot_collision.yml  robot_materials.yml  robot_motors.yml
configuration/robot/urdf/: robot.urdf
example/: camera_config1.txt  dmp_behavior.py  first_feedback.py  learning_config.yml  run_experiment.py
src/: ThrowingEnvironment.cpp  ThrowingEnvironment.h
